A list of changes required by 2025-03
Otherwise I would get obscure compilation errors ... strange. Maybe is it a consequence of me using the RC1 ?